Bug 83057 - FILESAVE: [DOCX] File corrupts after Round Trip
Summary: FILESAVE: [DOCX] File corrupts after Round Trip
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.7.2 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0 target:7.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-25 11:45 UTC by Vinaya Mandke
Modified: 2022-09-28 07:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Optimized file (154.12 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-08-25 11:46 UTC, Vinaya Mandke
Details
Issue File (167.75 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-08-25 11:46 UTC, Vinaya Mandke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vinaya Mandke 2014-08-25 11:45:10 UTC
Open the issue file in LO.

> Save file as docx
> Open the saved file in MS WORD 2010

Expected Result :: File Opens without corruption on Word
Actual Result :: File is shown as corrupt on Word

Root Cause:-

In the original file  /word/header2.xml
there is an SDT and, a drawing which has a PAGE field.

In RT file there are two SDTs instead of one as in the original.
Comment 1 Vinaya Mandke 2014-08-25 11:46:01 UTC
Created attachment 105232 [details]
Optimized file
Comment 2 Vinaya Mandke 2014-08-25 11:46:46 UTC
Created attachment 105233 [details]
Issue File
Comment 3 Yousuf Philips (jay) (retired) 2014-08-26 16:13:51 UTC
Confirmed on Windows with master, 4.1.6 and 3.6.7. Word 2013 gives an error but if you go through the error messages, the file opens fine.
Comment 4 Commit Notification 2014-09-08 07:53:48 UTC
Vinaya Mandke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e6b295e55d82f236206c24f5cf1dcc314c34b20f

fdo#83057 File corrupts on save, as SDT is added incorrectly



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Jorendc 2014-09-13 19:33:19 UTC
Patch merged + unit test -> RESOLVED FIXED.
Comment 6 Commit Notification 2022-09-28 07:47:32 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/914d246e0edcbdfa5969b7f3eea7c67e1a5b7522

crashtesting: fix PDF export of fdo83057-2.docx

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.